--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,7 +21,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>net.sf.dozer</groupId>
+    <groupId>com.dibs</groupId>
     <artifactId>dozer-parent</artifactId>
     <version>5.5.1-PDFIX</version>
   </parent>
