BI-3923: change more to com.dibs

--- a/osgi/pom.xml
+++ b/osgi/pom.xml
@@ -127,7 +127,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>net.sf.dozer</groupId>
+      <groupId>com.dibs</groupId>
       <artifactId>dozer</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
