--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -36,7 +36,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>net.sf.dozer</groupId>
+      <groupId>com.dibs</groupId>
       <artifactId>dozer</artifactId>
       <version>${project.version}</version>
     </dependency>
