--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <groupId>com.dibs</groupId>
   <artifactId>dozer-parent</artifactId>
   <packaging>pom</packaging>
-  <version>5.5.2-PDFIX.1-SNAPSHOT</version>
+  <version>5.5.2-PDFIX.2</version>
   <url>http://dozer.sourceforge.net</url>
   <name>Dozer Parent Project</name>
   <description>Dozer is a powerful Java Bean to Java Bean mapper that recursively copies data from one object to
