--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>com.dibs</groupId>
     <artifactId>dozer-parent</artifactId>
-    <version>5.5.2-PDFIX.1-SNAPSHOT</version>
+    <version>5.5.2-PDFIX.2</version>
   </parent>
 
   <artifactId>dozer-proto</artifactId>
@@ -36,7 +36,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.dibs</groupId>
+      <groupId>net.sf.dozer</groupId>
       <artifactId>dozer</artifactId>
       <version>${project.version}</version>
     </dependency>
